qml: add change rate menu
fixed task located at: https://trac.videolan.org/vlc/ticket/22268

qml: made changes

+ VLC theme compliant
+ Use VLCStyle scale
+ Color changes on focus
+ Keyboard navigable widget
+ Popup position relative to widget
+ Menu replaced with Popup

Remaining:
- Integration with player controller view

qml: Integrate rate change popup with player controller

qml: made changes

Added
+ move widget to separate file
+ use large icon for rateBtn
+ auto focus when popup is opened
+ buttons use correct icon

qml: add ticks on slider

--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -228,6 +228,7 @@
         <file alias="CheckableModelSubMenu.qml">qml/menus/CheckableModelSubMenu.qml</file>
         <file alias="ViewMenu.qml">qml/menus/ViewMenu.qml</file>
         <file alias="PopupMenu.qml">qml/menus/PopupMenu.qml</file>
+        <file alias="RateChangePopupMenu.qml">qml/menus/RateChangePopupMenu.qml</file>
     </qresource>
     <qresource prefix="/player">
         <file alias="Player.qml">qml/player/Player.qml</file>
