--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -200,6 +200,8 @@
         <file alias="SortControl.qml">qml/utils/SortControl.qml</file>
         <file alias="RoundButton.qml">qml/utils/RoundButton.qml</file>
         <file alias="LabelSeparator.qml">qml/utils/LabelSeparator.qml</file>
+        <file alias="ContextButton.qml">qml/utils/ContextButton.qml</file>
+        <file alias="RoundImage.qml">qml/utils/RoundImage.qml</file>
     </qresource>
     <qresource prefix="/mediacenter">
         <file alias="MCMusicDisplay.qml">qml/mediacenter/MCMusicDisplay.qml</file>
@@ -218,6 +220,8 @@
         <file alias="NetworkListItem.qml">qml/mediacenter/NetworkListItem.qml</file>
         <file alias="MiniPlayer.qml">qml/mediacenter/MiniPlayer.qml</file>
         <file alias="VideoExpandableGrid.qml">qml/mediacenter/VideoExpandableGrid.qml</file>
+        <file alias="MCVideoQualityLabel.qml">qml/mediacenter/MCVideoQualityLabel.qml</file>
+        <file alias="MCVideoProgressBar.qml">qml/mediacenter/MCVideoProgressBar.qml</file>
     </qresource>
     <qresource prefix="/style">
         <file alias="qmldir">qml/style/qmldir</file>
