--- a/modules/gui/qt/vlc.qrc
+++ b/modules/gui/qt/vlc.qrc
@@ -220,6 +220,7 @@
         <file alias="NetworkListItem.qml">qml/mediacenter/NetworkListItem.qml</file>
         <file alias="MiniPlayer.qml">qml/mediacenter/MiniPlayer.qml</file>
         <file alias="VideoExpandableGrid.qml">qml/mediacenter/VideoExpandableGrid.qml</file>
+        <file alias="MCVideoListDisplay.qml">qml/mediacenter/MCVideoListDisplay.qml</file>
         <file alias="MCVideoQualityLabel.qml">qml/mediacenter/MCVideoQualityLabel.qml</file>
         <file alias="MCVideoProgressBar.qml">qml/mediacenter/MCVideoProgressBar.qml</file>
     </qresource>
